<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="100dp"
    tools:context=".ui.auth.SignUpActivity">

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_up"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edtFirstName"/>

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:minHeight="48dp"
        android:layout_margin="15dp"
        android:hint="@string/txt_first_name"
        android:inputType="text"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintBottom_toTopOf="@id/edtLastName"/>

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:minHeight="48dp"
        android:layout_margin="15dp"
        android:hint="@string/txt_last_name"
        android:inputType="text"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintBottom_toTopOf="@id/edtUserName"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:minHeight="48dp"
        android:layout_margin="15dp"
        android:hint="@string/txt_username"
        android:inputType="text"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="@dimen/padding_edit_text"
        app:layout_constraintBottom_toTopOf="@id/edtPassword"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:minHeight="48dp"
        android:layout_margin="15dp"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="15dp"
        android:text="@string/txt_sign_up"
        android:background="@drawable/bg_button"
        android:onClick="onClickSignUp"
        android:layout_marginTop="@dimen/padding_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>